--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext.kotlin_version = '1.3.41'
     ext.nav_version = '2.0.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
@@ -37,7 +37,7 @@ ext.versions = [
     'nav_version': nav_version,
     'paging_version': '2.1.0',
     'koin': '1.0.2',
-    'coroutines': '1.2.1',
+    'coroutines': '1.3.0-M2',
     'room': '2.1.0',
     'assertj': '2.9.1',
     'mockito_kotlin': '2.1.0',
