--- a/build.gradle
+++ b/build.gradle
@@ -37,14 +37,14 @@ ext.versions = [
     'nav_version': nav_version,
     'paging_version': '2.1.0',
     'koin': '1.0.2',
-    'coroutines': '1.3.0-M2',
+    'coroutines': '1.3.0-RC',
     'room': '2.1.0',
     'assertj': '2.9.1',
     'mockito_kotlin': '2.1.0',
     'timber': '4.7.1',
     'lifecycle': '2.0.0',
     'glide': '4.9.0',
-    'mockk': '1.9.2',
+    'mockk': '1.9.3',
     'appCompat': '1.1.0-beta01',
     'recyclerView': '1.1.0-alpha06',
     'androidX': '1.2.0-alpha02',
