--- a/data/build.gradle
+++ b/data/build.gradle
@@ -57,7 +57,7 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.8"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:${versions.coroutines}"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
     implementation "com.jakewharton.timber:timber:${versions.timber}"
