--- a/network/build.gradle
+++ b/network/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi:1.8.0"
     implementation("com.squareup.okio:okio:${versions.okio}")
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
 
     implementation "org.koin:koin-android:${versions.koin}"
