--- a/workers/build.gradle
+++ b/workers/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation project(':common')
     implementation project(':domain')
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
     implementation "com.jakewharton.timber:timber:${versions.timber}"
 
