--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     testOptions {
         unitTests {
             includeAndroidResources = true
@@ -72,6 +76,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:${versions.nav_version}"
     implementation "com.google.android.material:material:${versions.material}"
 
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:${versions.swiperefreshlayout}"
     implementation 'com.github.stfalcon:stfalcon-imageviewer:0.1.0'
 
     implementation("com.github.bumptech.glide:glide:${versions.glide}") {
@@ -111,7 +116,7 @@ dependencies {
     testImplementation 'com.jraska.livedata:testing:1.1.0'
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
-    testImplementation "androidx.arch.core:core-testing:2.0.1"
+    testImplementation "androidx.arch.core:core-testing:${versions.core_testing}"
     testImplementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     testImplementation 'junit:junit:4.12'
     testImplementation "org.robolectric:robolectric:${versions.robolectric}"
