--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.41'
-    ext.nav_version = '2.0.0'
+    ext.kotlin_version = '1.3.50'
+    ext.nav_version = '2.1.0'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
@@ -38,18 +38,20 @@ ext.versions = [
     'paging_version': '2.1.0',
     'koin': '1.0.2',
     'coroutines': '1.3.0-RC',
-    'room': '2.1.0',
+    'core_testing': '2.1.0',
+    'room': '2.2.0',
     'assertj': '2.9.1',
     'mockito_kotlin': '2.1.0',
     'timber': '4.7.1',
-    'lifecycle': '2.0.0',
+    'lifecycle': '2.1.0',
     'glide': '4.9.0',
+    'swiperefreshlayout' :'1.0.0',
     'mockk': '1.9.3',
-    'appCompat': '1.1.0-beta01',
-    'recyclerView': '1.1.0-alpha06',
-    'androidX': '1.2.0-alpha02',
-    'material': '1.1.0-alpha07',
-    'robolectric': '4.2',
+    'appCompat': '1.1.0',
+    'recyclerView': '1.1.0-beta05',
+    'androidX': '1.2.0-beta01',
+    'material': '1.1.0-beta01',
+    'robolectric': '4.3.1',
     'workmanager': '2.0.0'
 ]
 
