--- a/data/build.gradle
+++ b/data/build.gradle
@@ -55,7 +55,7 @@ dependencies {
         exclude group: 'org.jetbrains.kotlinx', module: 'kotlinx-coroutines-android'
     }
 
-    implementation "io.reactivex.rxjava2:rxjava:2.2.8"
+    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-rx2:${versions.coroutines}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
@@ -76,6 +76,6 @@ dependencies {
     androidTestImplementation "org.assertj:assertj-core:${versions.assertj}"
     androidTestImplementation "org.koin:koin-test:${versions.koin}"
     androidTestImplementation "androidx.room:room-testing:${versions.room}"
-    androidTestImplementation "androidx.arch.core:core-testing:2.0.1"
+    androidTestImplementation "androidx.arch.core:core-testing:${versions.core_testing}"
     androidTestImplementation 'androidx.test:runner:1.2.0'
 }
