--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ ext.versions = [
     'nav_version': nav_version,
     'paging_version': '2.1.0',
     'koin': '1.0.2',
-    'coroutines': '1.3.0-RC',
+    'coroutines': '1.3.2',
     'core_testing': '2.1.0',
     'room': '2.2.0',
     'assertj': '2.9.1',
